# mixeff-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  VERSIONING.md  build.rs  deny.toml
.github/workflows/: ci.yml  release.yml
audit/: 00-SYNTHESIS.md  01-numerical-core.md  02-lmm-driver.md  03-glmm-driver.md  04-compiler-inference.md  05-stats-postfit.md  06-formula-pathology.md  07-optimizer-api-release.md
benches/: pls_kernel.rs
benchmarks/: perf_baseline.json
comparison/: README.md  REPORT.md  difficult_model_scoreboard.toml  lme4_results.json  manifest.json  parity_scorecard.toml  rust_results.json
comparison/asymptotic/: REPORT.md  lme4_results.json  rust_results.json
comparison/metafor/: README.md  bcg_yi_vi.csv  metafor_results.json  rust_results.json
comparison/mixeff/: README.md  REPORT.md  lme4_results.json  rust_results.json
datasets/: REGISTRY.md
datasets/arabidopsis/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/cake/: _levels.txt  expected.toml  meta.toml
datasets/cbpp/: _levels.txt  meta.toml
datasets/contraception/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/culcitalogreg/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/dyestuff/: _levels.txt  meta.toml  provenance.toml
datasets/dyestuff2/: meta.toml
datasets/ergostool/: _levels.txt  expected.toml  meta.toml
datasets/gopherdat2/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/grouseticks/: _levels.txt  expected.toml  meta.toml
datasets/insteval/: _levels.txt  expected.toml  meta.toml  provenance.toml
datasets/kb07/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/machines/: _levels.txt  expected.toml  meta.toml  provenance.toml
datasets/mrk17_exp1/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/nested_constant_response/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/oats/: _levels.txt  expected.toml  meta.toml
datasets/orthodont/: _levels.txt  expected.toml  meta.toml
datasets/oxide/: _levels.txt  data.csv  expected.toml  meta.toml  provenance.toml
datasets/pastes/: _levels.txt  meta.toml  provenance.toml
datasets/penicillin/: _levels.txt  meta.toml
datasets/rail/: _levels.txt  meta.toml
docs/: README.md  bootstrap_fixed_effect_contract.md  boundary_lrt_variance_component_contract.md  certified_joint_glmm_optimizer_contract.md  cobyla_default_optimizer_audit.md  compiler_contract_v0_prd.md  compiler_verdicts.md  cross_engine_parity_scoreboard.md  difficult_model_certification.md  difficult_model_release_contract.md  fixed_effect_p_value_validation.md  fixed_effect_p_values_plan.md  formula_transform_seam.md  glmm_support_contract.md  inference_simulation_harness.md  julia_parity_fixture_drift.md  kenward_roger_contract.md  lazy_fixed_design_materialization.md  linalg_primitive_audit.md  mixed_model_compiler_inference_contract.md  mixeff_upstream_support_report.md  mmtrust_psd_lmm_prototype.md  model_comparison_policy.md  multivariate_shared_theta.md  optimizer_profiles.md  prima_backend_parity.md  profile_likelihood_json_contract.md  r_layer_proposal.md  random_effects_formulas.md  random_term_card_prd.md  response_matrix_batch_lmm.md  satterthwaite_scalar_contract.md  semver_policy.md  stash_salvage_audit.md  summary_estimates_meta_analysis.md  v1_0_release_roadmap.md
examples/: active_face_bench.rs  backfill_fixture_provenance.rs  bench_asymptotic.rs  bench_asymptotic_report.rs  bench_bootstrap.rs  bench_brown_rt.rs  bench_compiler_contract.rs  bench_mixeff_parity.rs  bench_penicillin_convergence.rs  bench_response_matrix_batch.rs  bench_rust.rs  bootstrap_refit_bench.rs  compare_metafor.rs  compare_report.rs  compare_rust.rs  debug_inference_drift.rs  glmm_quickstart.rs  inference_route_simulation.rs  lmm_lme4_comparison.rs  objective_eval_bench.rs  optimizer_bench_harness.rs  parity_dump.rs  perf_gate.rs  probe_aphantasia_combined.rs  probe_aphantasia_profiled_vcov.rs  probe_aphantasia_sensitivity.rs  probe_brown_crossed_lmm.rs  probe_high_baseline_glmm.rs  probe_iamciera_drop_tray.rs  probe_sleepstudy_native.rs  probe_tungara_glmm.rs  probe_weak_id.rs  profile_glmm_refit_loop.rs  profile_grouseticks_glmm.rs  profile_kb07.rs  profile_pls_kernel.rs  profile_refit_loop.rs  quickstart.rs  streamed_rank_bench.rs  tune_bobyqa_asymptotic.rs
scripts/: _pin_helpers.R  bench_asymptotic.R  bench_julia.jl  bench_mixeff_lme4.R  bench_report.sh  bench_response_matrix_lme4.R  check_julia_parity_fixtures.sh  check_release_lme4_parity.sh  compare_json_tolerant.py  compare_lme4.R  compare_metafor.R  dump_datasets.R  dump_julia_datasets.jl  dump_synthesized_datasets.R  parity_dump_julia.jl  parity_pathologies.R  parity_pathologies.jl  regenerate_all.sh  regenerate_julia_parity_fixtures.jl  regenerate_lme4_covariance_fixtures.R  regenerate_lme4_glmm_link_fixtures.R  regenerate_mixedmodels_covariance_fixtures.jl
src/: error.rs  lib.rs
tests/: aphantasia_fixture.rs  architecture.rs  boundary_lrt_contract.rs  compiler_contract_snapshots.rs  compiler_contract_structure.rs  covariance_pluggability.rs  cross_engine_scoreboard.rs  crossed_correlation_parameter.rs  dataset_metamorphic.rs  dense_lmm_oracle.rs  difficult_model_scoreboard.rs  fixture_hygiene.rs  glmm_artifact_contract.rs  glmm_comparison_gates.rs  glmm_diagnostic_taxonomy.rs  glmm_diagnostics.rs  glmm_link_lme4.rs  glmm_speed_parity.rs  lme4_issue_124.rs  lmm_batch.rs  lmm_engine_bootstrap.rs  lmm_engine_compiler.rs  lmm_engine_contrasts.rs  lmm_engine_fit.rs  lmm_engine_inference.rs  lmm_engine_prediction.rs  mixeff_speed_parity.rs  nested_constant_response.rs  parity_agq.rs  parity_divergence_contract.rs  parity_gamma_glmm.rs  parity_glmm_correlated_slope.rs  parity_glmm_high_baseline.rs  parity_glmm_native.rs  parity_negative_binomial_glmm.rs  parity_parmap.rs  parity_ranef.rs  parity_rank_deficient.rs  parity_scorecard.rs  pathology_corpus.rs  (+4 more)
(+196 files in other folders)
