[package]
name = "mixeff-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Linear and generalized linear mixed-effects models in Rust; engine for the mixeff R package, parity-tested against Julia's MixedModels.jl"
license = "MIT"
authors = ["Bradley Buchsbaum <brad.buchsbaum@gmail.com>"]
repository = "https://github.com/bbuchsbaum/mixeff-rs"
documentation = "https://docs.rs/mixeff-rs"
readme = "README.md"
keywords = ["statistics", "mixed-models", "lme4", "regression", "glmm"]
categories = ["science", "mathematics", "algorithms"]
exclude = [
    "AGENTS.md",
    "CLAUDE.md",
    "Cargo.toml.orig",
    "MixedModels.jl/",
    "comparison/",
    "scripts/",
    "docs/",
    ".github/",
    ".mote/",
    ".omc/",
    "tests/fixtures/",
    "progress.txt",
    "prd.json",
]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
nalgebra-sparse = "0.10"
cobyla = "1"
statrs = "0.18"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
num-traits = "0.2"
approx = "0.5"
indexmap = "2"
log = "0.4"
nlopt = { version = "0.8.1", optional = true }
csv = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
minilp = "0.2"

[features]
default = ["nlopt"]
# Enables NLopt (BOBYQA / large-θ paths and optional GLMM optimizer parity).
# This is the default release optimizer path because it is substantially more
# iteration-efficient on vector and crossed LMMs. Dependency-light builds can
# opt out with `--no-default-features`, which uses the native TrustBQ LMM
# optimizer plus native GLMM fallbacks.
nlopt = ["dep:nlopt"]
# Enables the PRIMA C backend for explicitly requested Powell optimizers.
# This first slice wires bounded LMM theta optimization through PRIMA BOBYQA
# only. The feature expects a system PRIMA C library visible to the linker.
prima = []
# Exposes the unstable internal surface (`compiler`, `datasets`, `pathology`)
# as public modules. These are NOT covered by the 1.0 SemVer guarantee — the
# compiler/IR is still in flux and dataset provenance churns. Off by default
# so IR refinements are not SemVer-major breaks. See docs/semver_policy.md.
unstable-internals = []

[dev-dependencies]
approx = "0.5"
# `default-features = false` drops the plotters/cairo + rayon stack so the
# benches build with no system graphics deps.
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "pls_kernel"
harness = false

# Examples that consume the unstable internal surface (compiler / datasets /
# pathology) only build when that feature is enabled, so the default
# `cargo build --examples` stays on the stable public API.
[[example]]
name = "bench_compiler_contract"
required-features = ["unstable-internals"]

[[example]]
name = "bench_penicillin_convergence"
required-features = ["unstable-internals"]

[[example]]
name = "bench_response_matrix_batch"
required-features = ["unstable-internals"]

[[example]]
name = "compare_rust"
required-features = ["unstable-internals"]

[[example]]
name = "lmm_lme4_comparison"
required-features = ["unstable-internals"]

[[example]]
name = "probe_tungara_glmm"
required-features = ["unstable-internals"]

[[example]]
name = "probe_weak_id"
required-features = ["unstable-internals"]

[[example]]
name = "profile_kb07"
required-features = ["unstable-internals"]
