[package]
name = "mixedmodels"
version = "0.1.0"
edition = "2021"
description = "Mixed-effects models in Rust — port of MixedModels.jl"
license = "MIT"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
nalgebra-sparse = "0.10"
cobyla = "1"
statrs = "0.18"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
num-traits = "0.2"
approx = "0.5"
indexmap = "2"
log = "0.4"
nlopt = { version = "0.8.1", optional = true }
csv = "1"
faer = { version = "0.24", default-features = false, features = ["std"] }
dyn-stack = "0.13"
toml = { version = "0.8", default-features = false, features = ["parse"] }
minilp = "0.2"

[features]
default = []
# Enables NLopt (BOBYQA / large-θ paths and optional GLMM optimizer parity).
# Requires CMake plus a C/C++ toolchain at build time, which is heavy
# for downstream R/CRAN-tarball distribution. The default build uses
# COBYLA-based native fits for LMMs and GLMMs.
nlopt = ["dep:nlopt"]
# Enables the PRIMA C backend for explicitly requested Powell optimizers.
# This first slice wires bounded LMM theta optimization through PRIMA BOBYQA
# only. The feature expects a system PRIMA C library visible to the linker.
prima = []

[profile.dev]
# The LMM engine is dominated by numeric kernels whose unoptimized debug
# performance can be tens of times slower than release. Keep debuginfo and
# normal dev runtime checks while enabling enough optimization for local parity
# and R bridge smoke tests to use realistic engine timings.
opt-level = 3

[profile.test]
# Keep Rust unit-test numerics on the standard debug profile. Several parity
# tests assert tight optimizer and finite-difference values that are sensitive
# to optimized test-profile floating-point trajectories.
opt-level = 0

[dev-dependencies]
approx = "0.5"
